--- a/style.css
+++ b/style.css
@@ -8,10 +8,12 @@ body{
 
 
 .index-body{
-    background: url(/img/5172658.jpg);
+    background: url(/img/5172658.JPG);
     background-size: 100%;
     display: flex;
     flex-direction: column;
+    height: 100%;
+    width: 100%;
 }
 
 .welcome{
