--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 
 
 .index-body{
-    background: url(/img/5172658.jpg);
+    background-image: url(/img/5172658.JPG);
     background-size: 100%;
     display: flex;
     flex-direction: column;
